test/invalid/41625_InvalidSyntaxSuperToTheRight/InvalidSuperToTheRight.plume

class InvalidSuperToTheRight extends Object is
 
 	method teste : () -> String is 
		new InvalidSuperToTheRight().super